fix: 업무 등록 오류 수정, 업무 상세조회 값 추가
