# src/config/swagger/swagger.yaml
@@ -4126,6 +4126,9 @@ components:
               level:
                 type: string
                 description: 난이도
+              userSn:
+                type: integer
+                description: 담당자 일련번호
               present:
                 type: string
                 description: 업무 담당자
@@ -4152,6 +4155,9 @@ components:
                     issueTitle:
                       type: string
                       description: 이슈 이름
+                    userSn:
+                      type: integer
+                      description: 생성자 일련번호
                     creater:
                       type: string
                       description: 이슈 생성자
@@ -4162,6 +4168,7 @@ components:
                 title: ERD 설계
                 priority: L0
                 level: HIGH
+                userSn: 1
                 present: 홍길동
                 startDt: 2024-01-01 06:00:00
                 endDt: 2024-01-07 16:00:00
@@ -4170,14 +4177,17 @@ components:
                   - issueSn: 11
                     createDate: 2024-01-05 13:00:00
                     issueTitle: DB 컬럼 추가
+                    userSn: 2
                     creater: 아무개
                   - issueSn: 13
                     createDate: 2024-01-07 13:00:00
                     issueTitle: DB 컬럼명 변경
+                    userSn: 3
                     creater: 누군가
                   - issueSn: 28
                     createDate: 2024-01-09 13:00:00
                     issueTitle: 테이블 추가
+                    userSn: 4
                     creater: 김철수
     getTaskDetail400:
       description: 업무 상세 조회 에러
